Add parallelization and review code